header done, align content divs need minor fixes

--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -29,7 +29,7 @@
 
 @mixin photo{
     box-shadow: $color-shadow;
-    border-radius: 50%;
+    border-radius: 68px;
 }
 
 @mixin currency{
