--- a/css/style.scss
+++ b/css/style.scss
@@ -32,7 +32,7 @@ a{
 .main{
     margin: 50px 100px auto;
 }
-
+//====Side Menu====
 .sideMenu{
     @include white-block;
     display: flex;
@@ -77,33 +77,97 @@ a{
 }
 
 
+//====Header====
 .header{
     display: flex;
     flex-direction: row;
+    align-items: center;
+    //====div title box====
+    &__titleBox{
+        display: block;
+        width: 100%;
+    }
+    &__title{
+        font-weight: 500;
+        font-size: 2.4em;
+    }
+    &__subtitle{
+        color: $color-text-secondary;
+    }
+
+    //====div status====
+    &__status{
+        display: flex;
+        flex-direction: row;
+        align-content: center;
+        align-items: center;
+        justify-content: flex-end;
+        color: $color-text-secondary;
+        width: 100%;
+        > * {
+            margin: auto 20px;
+        }
+    }
+    &__button{
+        @include button;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        height: 55px;
+        width: 135px;
+        border: none;
+        transition: all 0.4s ease 0s;
+        transform: scale(1);
+        p{
+            padding: 0 10px ;
+        }
+        
+        &:hover{
+            transform: scale(1.03);
+            letter-spacing: 1px;
+            transition: all 0.4s ease 0s;
+        }
+    }
+    &__addUnitIcon{
+        height: 24px;
+        width: 24px;
+    }
+    &__photo{
+        @include photo;
+        cursor: pointer;
+        width: 68px;
+        height: 68px;
+        background-color: $color-main-bg;
+    }
 }
 
+
+//====Overview====
 .overview{
     display: flex;
     flex-direction: row;
 }
 
+//====Countries====
 .countries{
     @include white-block;
     display: flex;
     flex-direction: row;
 }
-
+//====Container of Team Members and Comparison====
 .container{
     display: flex;
 }
 
+//====teamMembers====
 .teamMembers{
     flex-basis: 50%;
     &__card{
         @include white-card;
     }
 }
-
+//====comparison====
 .comparison{
     flex-basis:50%;
     &__card{
